--- a/index.html
+++ b/index.html
@@ -5,6 +5,12 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1">
   <title>title</title>
+  <link rel="stylesheet" href="css/style.css" type="text/css" media="all" />
+  <script type="text/javascript" src="assets/jquery/dist/jquery.js?ver=1.11.3"></script>
+  <!--[if lt IE 9]>
+    <script src="js/html5shiv.js"></script>
+    <script src="js/respond.min.js"></script>
+  <![endif]-->
 </head>
 
 <body>
@@ -16,6 +22,9 @@
 
   <footer id="colophon" class="site-footer" role="contentinfo">
   </footer><!-- .site-footer -->
+
+  <script type="text/javascript" src="assets/modernizr/modernizr.js"></script>
+  <script type="text/javascript" src="js/script.js"></script>
 
 </body>
 </html>
