--- a/index.html
+++ b/index.html
@@ -6,25 +6,19 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1">
   <title>title</title>
   <link rel="stylesheet" href="css/style.css" type="text/css" media="all" />
-  <script type="text/javascript" src="assets/jquery/dist/jquery.js?ver=1.11.3"></script>
-  <!--[if lt IE 9]>
-    <script src="js/html5shiv.js"></script>
-    <script src="js/respond.min.js"></script>
-  <![endif]-->
 </head>
 
 <body>
-  <header id="masthead" class="site-header" role="banner">
+  <header class="site-header">
   </header><!-- .site-header -->
 
-  <main id="main" class="site-main" role="main">
+  <main class="site-main" role="main">
   </main><!-- .site-main -->
 
-  <footer id="colophon" class="site-footer" role="contentinfo">
+  <footer class="site-footer">
   </footer><!-- .site-footer -->
 
-  <script type="text/javascript" src="assets/modernizr/modernizr.js"></script>
+  <script type="text/javascript" src="assets/jquery/dist/jquery.js?ver=1.11.3"></script>
   <script type="text/javascript" src="js/script.js"></script>
-
 </body>
 </html>
