Change title and favicon

--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
-    <title>Video Archives</title>
+    <title>크로스핏 비디오 큐레이션</title>
   </head>
   <body>
     <div id="app"></div>
